syntax = "proto3";
package chromatic_capture_proto;

option go_package = "server/chromatic_capture_proto";

message BuildRequest {
  int32 id = 1;
  int32 capture_count = 2;
  string trace_header = 3;
}

message BuildResponse {
  string status = 1;
}

service BuildService {
  rpc CreateBuild(BuildRequest) returns (BuildResponse) {}
}
